# hermes

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  GEMINI.md  README.md  hermes.toml
.cargo/: config.toml
.github/workflows/: e2e.yml
assets/: main.css  tailwind.css  theme-init.js  webrtc.js
deploy/cloudflare/: Dockerfile  docker-compose.yml  entrypoint.sh
deploy/standalone/: Dockerfile  bootstrap-certbot.sh  certbot-renew.sh  docker-entrypoint.sh  nginx.http.conf.template  nginx.tls.conf.template  supervisord.conf
docs/: ARCH_DEEP_DIVE.md  DEPLOYMENT.md  ONBOARDING.md  colors.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: helpers.ts  server.ts  teardown.ts
e2e/test-fixtures/: small.txt
e2e/tests/: 01-server-upload.spec.ts  02-auth.spec.ts  02-share-link.spec.ts  03-p2p-transfer.spec.ts  04-navigation.spec.ts  05-auth.spec.ts  auth.setup.ts
migrations/: 0001_init.sql  0002_users.sql  0003_storage.sql  0004_server_config.sql
src/: api.rs  app.rs  lib.rs  main.rs
src/components/: mod.rs  progress.rs  uploader.rs
src/models/: auth.rs  file.rs  mod.rs  session.rs
src/pages/: download.rs  home.rs  login.rs  mod.rs  receive.rs  settings.rs
src/server/: auth.rs  cleanup.rs  config.rs  db.rs  download.rs  mod.rs  sessions.rs  signaling.rs  upload.rs
src/server/storage/: local.rs  mod.rs  router.rs  s3.rs
tests/: auth.rs  config.rs  handlers.rs  sessions.rs  signaling.rs  storage.rs
